1. 显而易见，只要Runtime满足，lowerVersion can Call HigherVersion (Starter-18 call Core-19) 2. 引入bizlog-sdk，记录业务日志, logging-module add Consumer